<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:labelFor="@string/offer_name"
                android:text="@string/offer_name"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/offer_name"

                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/offer_name"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="493dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:inputType="text"
                android:labelFor="@string/offer_description"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"

                android:text="@string/offer_description"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/offer_description"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/offer_picture"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/take_picture"
                app:layout_constraintEnd_toStartOf="@+id/take_picture"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/take_picture" />

            <EditText
                android:id="@+id/offer_description"
                android:layout_width="272dp"
                android:layout_height="133dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxLines="30"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/offer_name" />

            <TextView
                android:id="@+id/error_message"
                android:layout_width="0dp"
                android:layout_height="37dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/offer_picture" />

            <ImageView
                android:id="@+id/offer_picture"
                android:layout_width="185dp"
                android:layout_height="147dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:maxHeight="250dip"
                android:maxWidth="250dip"
                android:minHeight="30dip"
                android:minWidth="30dip"
                app:layout_constraintEnd_toEndOf="@+id/fetch_picture"
                app:layout_constraintStart_toStartOf="@+id/take_picture"
                app:layout_constraintTop_toBottomOf="@+id/fetch_picture" />

            <ImageButton
                android:id="@+id/fetch_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="56dp"
                android:layout_marginRight="56dp"
                android:background="@drawable/btn_rounded"
                android:theme="@style/ButtonTheme"
                app:layout_constraintBottom_toBottomOf="@+id/take_picture"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@android:drawable/ic_menu_gallery" />

            <ImageButton
                android:id="@+id/take_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="76dp"
                android:layout_marginRight="76dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/btn_rounded"
                android:theme="@style/ButtonTheme"
                app:layout_constraintEnd_toStartOf="@+id/fetch_picture"
                app:layout_constraintTop_toBottomOf="@+id/category_spinner"
                app:srcCompat="@android:drawable/ic_menu_camera" />

            <Button
                android:id="@+id/button_create_offer"
                android:layout_width="156dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/btn_rounded"
                android:text="@string/button_create_offer"
                android:theme="@style/ButtonTheme"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_save_pattern"
                app:layout_constraintTop_toBottomOf="@+id/localization_linear_layout" />

            <Button
                android:id="@+id/button_save_pattern"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/save_as_pattern"
                app:layout_constraintEnd_toStartOf="@+id/button_create_offer"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/localization_linear_layout"
                android:background="@drawable/btn_rounded"
                android:theme="@style/ButtonTheme"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/category_show_offer"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/category_spinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/category_spinner" />

            <Spinner
                android:id="@+id/category_spinner"
                android:layout_width="214dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/offer_description" />


            <LinearLayout
                android:id="@+id/date_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/offer_picture">

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/date"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/showDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:textSize="18dp" />

                <Button
                    android:id="@+id/pick_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/btn_rounded"
                    android:text="@string/pick_date"
                    android:theme="@style/ButtonTheme" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/localization_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/date_linear_layout">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="126dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="126dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/location_show_offer"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/offer_position_status"
                    android:layout_width="36dp"
                    android:layout_height="35dp"
                    android:layout_marginBottom="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginStart="32dp"
                    app:srcCompat="@android:drawable/checkbox_off_background" />

            </LinearLayout>


        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</ScrollView>