...
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="@style/ToolbarTheme"
            app:navigationContentDescription="abc_action_bar_home_description" />

        <FrameLayout
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/banner_red"
...
                android:text="@string/network_error"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/centralFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <android.support.design.widget.NavigationView
...
