...
    <string name="show_offer_title">Show offer</string>
    <string name="error_create_offer">The name and the description cannot be empty.</string>
    <string name="name">Name:</string>
    <string name="username_presentation">Username:</string>
    <string name="mail">Mail:</string>
    <string name="create_account">Create Account</string>
    <string name="error_create_offer_invalid">The name and the description can\'t be empty.</string>
    <string name="error_create_offer_database">Impossible to create the offer.</string>
    <string name="list_offer_error_database">Could not retrieve the offers.</string>
    <string name="following">Following</string>
    <string name="offers">Offers</string>
    <string name="create_offer">Create Offer</string>
    <string name="incorrect_user_creation">\"Please, enter correct info\"</string>
    <string name="modify_offer">modify offer</string>
...
